[project]
name = "reasoning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biomcp-python>=0.1.10",
    "loguru>=0.7.3",
    "mcp[cli]>=1.6.0",
    "openai>=1.76.0",
    "openai-agents>=0.0.17",
    "pytest-asyncio>=0.24.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.1",
    "watchdog>=6.0.0",
]

pythonpath = ["."]
